fixes broken jump click listener that was adding too duplicate click listeners

--- a/checkers.css
+++ b/checkers.css
@@ -28,7 +28,7 @@ button {
     height: 40px;
     background-color: black;
     color: white;
-    /*display: none;*/
+    display: none;
 }
 button.show-button {
     display: inline-block;
